// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with grouped bar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="grouped-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles and temperature in cities"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles and temperature in cities
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-grouped"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with simple bar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="simple-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles by city"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles by city
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-simple"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with simple bar of time series data and custom domainRange 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="simple-time-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles over 4 days"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles over 4 days
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-controls={null}
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-simple"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with simple bar of time series data and intervals 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="simple-time-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Temperature over time"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Temperature over time
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-simple"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with stacked bar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="stacked-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles and temperature in cities"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles and temperature in cities
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-stacked"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with stacked bar of time series data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="stacked-horizontal-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles / emissions over 4 days"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles / emissions over 4 days
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-controls={null}
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-stacked"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Card/BarChartCard with stacked bar of time series data and categories 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": 20,
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--card iot--bar-chart-card iot--card--wrapper"
      data-testid="Card"
      id="stacked-horizontal-sample"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Particles by city over time"
        >
          <div
            className="iot--card--title--text"
            data-testid="Card-title-notip"
          >
            Particles by city over time
          </div>
        </span>
        <div
          className="iot--card--toolbar"
          data-testid="Card-toolbar"
        >
          <div
            className="iot--card--toolbar-date-range-wrapper"
          >
            <div
              className="iot--card--toolbar-timerange-label"
              id="timeRange"
            >
              Default
            </div>
            <button
              aria-controls={null}
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Open and close list of options"
              className="iot--card--toolbar-date-range-action bx--overflow-menu bx--overflow-menu--lg"
              data-testid="Card-toolbar-range-picker"
              onClick={[Function]}
              onClose={[Function]}
              onKeyDown={[Function]}
              open={false}
              title="Select time range"
              type="button"
            >
              <svg
                aria-label="Select time range"
                className="bx--overflow-menu__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                />
                <path
                  d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                />
                <path
                  d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                />
                <title>
                  Select time range
                </title>
              </svg>
            </button>
          </div>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only iot--btn bx--btn bx--btn--sm bx--btn--ghost"
            data-testid="Card-toolbar-expand-button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            title="Expand to fullscreen"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="Expand to fullscreen"
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
              />
              <path
                d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--bar-chart-container"
        >
          <div
            id="mock-bar-chart-stacked"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
